--- a/src/assets/scss/layouts/_secciones.scss
+++ b/src/assets/scss/layouts/_secciones.scss
@@ -8,6 +8,12 @@
     @include mx.createFlex(column, flex-start, center) {
         gap: fn.pxTorem(50px);
     };
+    @include mx.addBreakpoint('medium') {
+        padding: fn.pxTorem(50px) fn.pxTorem(50px); 
+    } 
+    @include mx.addBreakpoint('small') {
+        padding: fn.pxTorem(50px) fn.pxTorem(30px); 
+    } 
 
     h2 {
         font-size: var.getTypography('xxl');
