--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -13,6 +13,7 @@ body {
     color: var(--color-text);
 }
 h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-title);
     font-weight: 700;
     color: var(--color-title);
     @extend %texto;
