--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -54,6 +54,7 @@ $images: (
     'logo-oager': '../images/logo-oager.webp',
     'logo-30oager': '../images/logo-30oager.webp',
     'header-background': '../images/plaza-salamanca.webp',
+    'header-background-generic': '../images/sede-oager.webp',
     'banner-contact': '../images/banner-contacto.webp',
     'banner-procedure': '../images/banner-tramites.webp',
     'banner-alert': '../images/banner-avisos.webp',
