--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -18,6 +18,9 @@
 @forward 'layouts/sidebar';
 @forward 'layouts/slider';
 @forward 'layouts/nav';
+@forward 'layouts/main';
+@forward 'layouts/menu-lateral';
+@forward 'layouts/contenido';
 @forward 'layouts/banner';
 @forward 'layouts/bienvenida';
 @forward 'layouts/avisos';
