--- a/src/assets/scss/layouts/_main.scss
+++ b/src/assets/scss/layouts/_main.scss
@@ -4,7 +4,7 @@
 
 /* Main */
 .main {
-    @include mx.createGrid(0px,auto,max-content 1fr) {        
+    @include mx.createGrid(0px,auto,250px 1fr) {        
         width: 100%;
     };
 
