--- a/src/assets/scss/layouts/_contenido.scss
+++ b/src/assets/scss/layouts/_contenido.scss
@@ -3,3 +3,11 @@
 @use '../utils/mixins' as mx;
 
 /* Contenido */
+.contenido {
+    h2 {
+        padding-bottom: fn.pxTorem(30px);
+        width: 100%;
+        text-align: center;
+        font-size: var.getTypography('xl');
+    }
+}
