--- a/src/assets/scss/layouts/_main.scss
+++ b/src/assets/scss/layouts/_main.scss
@@ -4,14 +4,36 @@
 
 /* Main */
 .main {
-    @include mx.createGrid(0px,auto,250px 1fr) {        
+    @include mx.createGrid(0px,auto,240px 1fr) {        
         width: 100%;
     };
+    @include mx.addBreakpoint('medium') {
+        grid-template-rows: auto 1fr;
+        grid-template-columns: auto;
+    }
 
     &__menu-lateral {
         height: 100%;
         background-color: var(--color-primary);
         color: var(--color-light);
+        @include mx.createFlex(column, flex-start, flex-start);
+
+        &--open {
+            padding: fn.pxTorem(30px) 0;
+            height: 100vh;
+            z-index: 20;
+            position: fixed;
+            top: 0;
+            right: 0;
+            overflow-x: hidden;
+            background-color: var(--color-primary);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            width: 100%;
+            gap: fn.pxTorem(30px)           
+        }
     }
 
     &__contenido {
